--- a/index.html
+++ b/index.html
@@ -3,16 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="preconnect"
-      href="https://cdnjs.com/libraries/modern-normalize"
-    />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
     <link rel="stylesheet" href="./css/style.css" />
     <title>WebStudio</title>
   </head>
@@ -109,7 +115,7 @@
       <!--Our Team-->
       <section class="section our-team">
         <div class="container">
-          <h2 class="team-title section-title">Our Team</h2>
+          <h2 class="section-title team-title">Our Team</h2>
           <ul class="team-list">
             <li class="team-item-card">
               <img
@@ -118,8 +124,10 @@
                 width="264"
                 alt="Mark Guerrero"
               />
-              <h3 class="team-name">Mark Guerrero</h3>
-              <p class="team-profesion">Product Designer</p>
+              <div class="team-block-info">
+                <h3 class="team-name">Mark Guerrero</h3>
+                <p class="team-profesion">Product Designer</p>
+              </div>
             </li>
 
             <li class="team-item-card">
@@ -129,8 +137,10 @@
                 width="264"
                 alt="Tom Ford"
               />
-              <h3 class="team-name">Tom Ford</h3>
-              <p class="team-profesion">Frontend Developer</p>
+              <div class="team-block-info">
+                <h3 class="team-name">Tom Ford</h3>
+                <p class="team-profesion">Frontend Developer</p>
+              </div>
             </li>
 
             <li class="team-item-card">
@@ -140,8 +150,10 @@
                 width="264"
                 alt="Camila Garcia"
               />
-              <h3 class="team-name">Camila Garcia</h3>
-              <p class="team-profesion">Marketing</p>
+              <div class="team-block-info">
+                <h3 class="team-name">Camila Garcia</h3>
+                <p class="team-profesion">Marketing</p>
+              </div>
             </li>
 
             <li class="team-item-card">
@@ -151,8 +163,10 @@
                 width="264"
                 alt="Daniel Wilson"
               />
-              <h3 class="team-name">Daniel Wilson</h3>
-              <p class="team-profesion">UI Designer</p>
+              <div class="team-block-info">
+                <h3 class="team-name">Daniel Wilson</h3>
+                <p class="team-profesion">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
