--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       <!-- Our Portfolio -->
       <section class="section our-portfolio">
         <div class="container">
-          <h2 class="portfolio-title section-title">Our Portfolio</h2>
+          <h2 class="section-title portfolio-title">Our Portfolio</h2>
 
           <ul class="portfolio-list">
             <li class="portfolio-item">
